; ModuleID = '/home/carl/AnghaBench/linux/drivers/regulator/extr_stm32-vrefbuf.c_stm32_vrefbuf_get_voltage_sel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/regulator/extr_stm32-vrefbuf.c_stm32_vrefbuf_get_voltage_sel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regulator_dev = type { i32 }
%struct.stm32_vrefbuf = type { i32, i64 }

@STM32_VREFBUF_CSR = common dso_local global i64 0, align 8
@STM32_VRS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regulator_dev*)* @stm32_vrefbuf_get_voltage_sel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stm32_vrefbuf_get_voltage_sel(%struct.regulator_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.regulator_dev*, align 8
  %4 = alloca %struct.stm32_vrefbuf*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.regulator_dev* %0, %struct.regulator_dev** %3, align 8
  %7 = load %struct.regulator_dev*, %struct.regulator_dev** %3, align 8
  %8 = call %struct.stm32_vrefbuf* @rdev_get_drvdata(%struct.regulator_dev* %7)
  store %struct.stm32_vrefbuf* %8, %struct.stm32_vrefbuf** %4, align 8
  %9 = load %struct.stm32_vrefbuf*, %struct.stm32_vrefbuf** %4, align 8
  %10 = getelementptr inbounds %struct.stm32_vrefbuf, %struct.stm32_vrefbuf* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @pm_runtime_get_sync(i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %1
  %16 = load %struct.stm32_vrefbuf*, %struct.stm32_vrefbuf** %4, align 8
  %17 = getelementptr inbounds %struct.stm32_vrefbuf, %struct.stm32_vrefbuf* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @pm_runtime_put_noidle(i32 %18)
  %20 = load i32, i32* %6, align 4
  store i32 %20, i32* %2, align 4
  br label %40

21:                                               ; preds = %1
  %22 = load %struct.stm32_vrefbuf*, %struct.stm32_vrefbuf** %4, align 8
  %23 = getelementptr inbounds %struct.stm32_vrefbuf, %struct.stm32_vrefbuf* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @STM32_VREFBUF_CSR, align 8
  %26 = add nsw i64 %24, %25
  %27 = call i32 @readl_relaxed(i64 %26)
  store i32 %27, i32* %5, align 4
  %28 = load i32, i32* @STM32_VRS, align 4
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @FIELD_GET(i32 %28, i32 %29)
  store i32 %30, i32* %6, align 4
  %31 = load %struct.stm32_vrefbuf*, %struct.stm32_vrefbuf** %4, align 8
  %32 = getelementptr inbounds %struct.stm32_vrefbuf, %struct.stm32_vrefbuf* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = call i32 @pm_runtime_mark_last_busy(i32 %33)
  %35 = load %struct.stm32_vrefbuf*, %struct.stm32_vrefbuf** %4, align 8
  %36 = getelementptr inbounds %struct.stm32_vrefbuf, %struct.stm32_vrefbuf* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = call i32 @pm_runtime_put_autosuspend(i32 %37)
  %39 = load i32, i32* %6, align 4
  store i32 %39, i32* %2, align 4
  br label %40

40:                                               ; preds = %21, %15
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local %struct.stm32_vrefbuf* @rdev_get_drvdata(%struct.regulator_dev*) #1

declare dso_local i32 @pm_runtime_get_sync(i32) #1

declare dso_local i32 @pm_runtime_put_noidle(i32) #1

declare dso_local i32 @readl_relaxed(i64) #1

declare dso_local i32 @FIELD_GET(i32, i32) #1

declare dso_local i32 @pm_runtime_mark_last_busy(i32) #1

declare dso_local i32 @pm_runtime_put_autosuspend(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
